<resources>
    <string name="app_name">XueAndroid</string>

    <string name="loading">加载中</string>
    <string name="load_failed">加载失败</string>

    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="project">项目</string>
    <string name="wx">公众号</string>

    <string name="complete_info">请完善信息</string>
    <string name="register">注册</string>
    <string name="password_not_match">密码输入不一致</string>
    <string name="register_success">注册成功</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_repassword">请确认密码</string>

    <string name="author">作者:</string>
    <string name="category">分类:</string>

    <string name="collect_list">收藏列表</string>
    <string name="collect_failed">收藏失败</string>
    <string name="uncollect_failed">取消收藏失败</string>
    <string name="hot_key">热搜</string>
    <string name="input_key">请输入搜索关键词</string>

    <string name="settings">设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="feedback">反馈</string>
    <string name="creattime">创建时间：%1$s</string>
    <string name="completetime">完成时间：%1$s</string>
</resources>
