<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseBackground"
    android:clickable="true">

    <View
        android:id="@+id/menu_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_title_height"
        android:background="@color/menu_head" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/menu_marginStart"
        android:layout_marginTop="@dimen/menu_title_marginTop"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/menu_marginStart"
        android:layout_marginTop="@dimen/menu_title_marginTop"
        android:gravity="center"
        android:textColor="@color/baseTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:paddingStart="@dimen/menu_button_padding"
        android:text="@string/login"
        android:textColor="@color/baseTextColor"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:paddingStart="@dimen/menu_button_padding"
        android:text="@string/logout"
        android:textColor="@color/baseTextColor"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Button
        android:id="@+id/collect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableEnd="@drawable/more"
        android:drawableStart="@drawable/favorite"
        android:gravity="left|center_vertical"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/collect_list"
        android:textColor="@color/baseTextColor"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/menu_user" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableEnd="@drawable/more"
        android:drawableStart="@drawable/settings"
        android:gravity="left|center_vertical"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/settings"
        android:textColor="@color/baseTextColor"
        app:layout_constraintTop_toBottomOf="@id/collect" />

</android.support.constraint.ConstraintLayout>
